fix analysis and adjust to LearnLib refactorings